// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterCells generates correct louvain clusters data with one sample in particular 1`] = `
Object {
  "cellSetLegendsData": Array [
    Object {
      "color": "#e377c2",
      "key": "louvain-0",
      "name": "Cluster 0",
    },
    Object {
      "color": "#8c564b",
      "key": "louvain-1",
      "name": "Cluster 1",
    },
  ],
  "filteredCells": Array [
    Object {
      "cellId": 1,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 2,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 3,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 4,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 5,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 6,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 7,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 8,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 9,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 10,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 11,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 12,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 13,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 14,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 15,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 16,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 17,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 18,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 19,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 20,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 21,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 22,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 23,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 24,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 25,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 26,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 27,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 28,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 29,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 30,
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
    },
    Object {
      "cellId": 31,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 32,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 33,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 34,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 35,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 36,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 37,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 38,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 39,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 40,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
  ],
}
`;

exports[`filterCells generates correct samples data with one sample in particular 1`] = `
Object {
  "cellSetLegendsData": Array [
    Object {
      "color": "#8c564b",
      "key": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "name": "KO",
    },
  ],
  "filteredCells": Array [
    Object {
      "cellId": 1,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 2,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 3,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 4,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 5,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 6,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 7,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 8,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 9,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 10,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 11,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 12,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 13,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 14,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 15,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 16,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 17,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 18,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 19,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 20,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 21,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 22,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 23,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 24,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 25,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 26,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 27,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 28,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 29,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 30,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 31,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 32,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 33,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 34,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 35,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 36,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 37,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 38,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 39,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
    Object {
      "cellId": 40,
      "cellSetKey": "b62028a1-ffa0-4f10-823d-93c9ddb88898",
      "cellSetName": "KO",
      "color": "#8c564b",
    },
  ],
}
`;

exports[`filterCells works correctly with some repeated names in louvain clusters 1`] = `
Object {
  "cellSetLegendsData": Array [
    Object {
      "color": "#e377c2",
      "key": "louvain-0",
      "name": "repeatedName",
    },
    Object {
      "color": "#8c564b",
      "key": "louvain-1",
      "name": "Cluster 1",
    },
    Object {
      "color": "#d62728",
      "key": "louvain-2",
      "name": "repeatedName",
    },
    Object {
      "color": "#2ca02c",
      "key": "louvain-3",
      "name": "Cluster 3",
    },
    Object {
      "color": "#ff7f0e",
      "key": "louvain-4",
      "name": "Cluster 4",
    },
    Object {
      "color": "#1f77b4",
      "key": "louvain-5",
      "name": "Cluster 5",
    },
    Object {
      "color": "#f8e71c",
      "key": "louvain-6",
      "name": "repeatedName",
    },
    Object {
      "color": "#3957ff",
      "key": "louvain-7",
      "name": "Cluster 7",
    },
    Object {
      "color": "#d3fe14",
      "key": "louvain-8",
      "name": "Cluster 8",
    },
    Object {
      "color": "#c9080a",
      "key": "louvain-9",
      "name": "Cluster 9",
    },
    Object {
      "color": "#fec7f8",
      "key": "louvain-10",
      "name": "Cluster 10",
    },
    Object {
      "color": "#0b7b3e",
      "key": "louvain-11",
      "name": "Cluster 11",
    },
    Object {
      "color": "#0bf0e9",
      "key": "louvain-12",
      "name": "Cluster 12",
    },
    Object {
      "color": "#c203c8",
      "key": "louvain-13",
      "name": "Cluster 13",
    },
  ],
  "filteredCells": Array [
    Object {
      "cellId": 1,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 2,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 3,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 4,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 5,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 6,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 7,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 8,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 9,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 10,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 11,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 12,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 13,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 14,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 15,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 16,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 17,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 18,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 19,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 20,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 21,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 22,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 23,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 24,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 25,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 26,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 27,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 28,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 29,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 30,
      "cellSetKey": "louvain-0",
      "cellSetName": "repeatedName",
      "color": "#e377c2",
    },
    Object {
      "cellId": 31,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 32,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 33,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 34,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 35,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 36,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 37,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 38,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 39,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 40,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 41,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 42,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 43,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 44,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 45,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 46,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 47,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 48,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 49,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 50,
      "cellSetKey": "louvain-1",
      "cellSetName": "Cluster 1",
      "color": "#8c564b",
    },
    Object {
      "cellId": 51,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    Object {
      "cellId": 52,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    Object {
      "cellId": 53,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    Object {
      "cellId": 54,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    Object {
      "cellId": 55,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    Object {
      "cellId": 56,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    Object {
      "cellId": 57,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    Object {
      "cellId": 58,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    Object {
      "cellId": 59,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    Object {
      "cellId": 60,
      "cellSetKey": "louvain-2",
      "cellSetName": "repeatedName",
      "color": "#d62728",
    },
    Object {
      "cellId": 61,
      "cellSetKey": "louvain-3",
      "cellSetName": "Cluster 3",
      "color": "#2ca02c",
    },
    Object {
      "cellId": 62,
      "cellSetKey": "louvain-3",
      "cellSetName": "Cluster 3",
      "color": "#2ca02c",
    },
    Object {
      "cellId": 63,
      "cellSetKey": "louvain-3",
      "cellSetName": "Cluster 3",
      "color": "#2ca02c",
    },
    Object {
      "cellId": 64,
      "cellSetKey": "louvain-3",
      "cellSetName": "Cluster 3",
      "color": "#2ca02c",
    },
    Object {
      "cellId": 65,
      "cellSetKey": "louvain-3",
      "cellSetName": "Cluster 3",
      "color": "#2ca02c",
    },
    Object {
      "cellId": 66,
      "cellSetKey": "louvain-4",
      "cellSetName": "Cluster 4",
      "color": "#ff7f0e",
    },
    Object {
      "cellId": 67,
      "cellSetKey": "louvain-4",
      "cellSetName": "Cluster 4",
      "color": "#ff7f0e",
    },
    Object {
      "cellId": 68,
      "cellSetKey": "louvain-4",
      "cellSetName": "Cluster 4",
      "color": "#ff7f0e",
    },
    Object {
      "cellId": 69,
      "cellSetKey": "louvain-4",
      "cellSetName": "Cluster 4",
      "color": "#ff7f0e",
    },
    Object {
      "cellId": 70,
      "cellSetKey": "louvain-4",
      "cellSetName": "Cluster 4",
      "color": "#ff7f0e",
    },
    Object {
      "cellId": 71,
      "cellSetKey": "louvain-5",
      "cellSetName": "Cluster 5",
      "color": "#1f77b4",
    },
    Object {
      "cellId": 72,
      "cellSetKey": "louvain-5",
      "cellSetName": "Cluster 5",
      "color": "#1f77b4",
    },
    Object {
      "cellId": 73,
      "cellSetKey": "louvain-5",
      "cellSetName": "Cluster 5",
      "color": "#1f77b4",
    },
    Object {
      "cellId": 74,
      "cellSetKey": "louvain-5",
      "cellSetName": "Cluster 5",
      "color": "#1f77b4",
    },
    Object {
      "cellId": 75,
      "cellSetKey": "louvain-5",
      "cellSetName": "Cluster 5",
      "color": "#1f77b4",
    },
    Object {
      "cellId": 76,
      "cellSetKey": "louvain-6",
      "cellSetName": "repeatedName",
      "color": "#f8e71c",
    },
    Object {
      "cellId": 77,
      "cellSetKey": "louvain-6",
      "cellSetName": "repeatedName",
      "color": "#f8e71c",
    },
    Object {
      "cellId": 78,
      "cellSetKey": "louvain-6",
      "cellSetName": "repeatedName",
      "color": "#f8e71c",
    },
    Object {
      "cellId": 79,
      "cellSetKey": "louvain-6",
      "cellSetName": "repeatedName",
      "color": "#f8e71c",
    },
    Object {
      "cellId": 80,
      "cellSetKey": "louvain-6",
      "cellSetName": "repeatedName",
      "color": "#f8e71c",
    },
    Object {
      "cellId": 81,
      "cellSetKey": "louvain-7",
      "cellSetName": "Cluster 7",
      "color": "#3957ff",
    },
    Object {
      "cellId": 82,
      "cellSetKey": "louvain-7",
      "cellSetName": "Cluster 7",
      "color": "#3957ff",
    },
    Object {
      "cellId": 83,
      "cellSetKey": "louvain-7",
      "cellSetName": "Cluster 7",
      "color": "#3957ff",
    },
    Object {
      "cellId": 84,
      "cellSetKey": "louvain-7",
      "cellSetName": "Cluster 7",
      "color": "#3957ff",
    },
    Object {
      "cellId": 85,
      "cellSetKey": "louvain-7",
      "cellSetName": "Cluster 7",
      "color": "#3957ff",
    },
    Object {
      "cellId": 86,
      "cellSetKey": "louvain-8",
      "cellSetName": "Cluster 8",
      "color": "#d3fe14",
    },
    Object {
      "cellId": 87,
      "cellSetKey": "louvain-8",
      "cellSetName": "Cluster 8",
      "color": "#d3fe14",
    },
    Object {
      "cellId": 88,
      "cellSetKey": "louvain-8",
      "cellSetName": "Cluster 8",
      "color": "#d3fe14",
    },
    Object {
      "cellId": 89,
      "cellSetKey": "louvain-8",
      "cellSetName": "Cluster 8",
      "color": "#d3fe14",
    },
    Object {
      "cellId": 90,
      "cellSetKey": "louvain-8",
      "cellSetName": "Cluster 8",
      "color": "#d3fe14",
    },
    Object {
      "cellId": 91,
      "cellSetKey": "louvain-9",
      "cellSetName": "Cluster 9",
      "color": "#c9080a",
    },
    Object {
      "cellId": 92,
      "cellSetKey": "louvain-9",
      "cellSetName": "Cluster 9",
      "color": "#c9080a",
    },
    Object {
      "cellId": 93,
      "cellSetKey": "louvain-9",
      "cellSetName": "Cluster 9",
      "color": "#c9080a",
    },
    Object {
      "cellId": 94,
      "cellSetKey": "louvain-10",
      "cellSetName": "Cluster 10",
      "color": "#fec7f8",
    },
    Object {
      "cellId": 95,
      "cellSetKey": "louvain-10",
      "cellSetName": "Cluster 10",
      "color": "#fec7f8",
    },
    Object {
      "cellId": 96,
      "cellSetKey": "louvain-11",
      "cellSetName": "Cluster 11",
      "color": "#0b7b3e",
    },
    Object {
      "cellId": 97,
      "cellSetKey": "louvain-11",
      "cellSetName": "Cluster 11",
      "color": "#0b7b3e",
    },
    Object {
      "cellId": 98,
      "cellSetKey": "louvain-12",
      "cellSetName": "Cluster 12",
      "color": "#0bf0e9",
    },
    Object {
      "cellId": 99,
      "cellSetKey": "louvain-12",
      "cellSetName": "Cluster 12",
      "color": "#0bf0e9",
    },
    Object {
      "cellId": 100,
      "cellSetKey": "louvain-13",
      "cellSetName": "Cluster 13",
      "color": "#c203c8",
    },
  ],
}
`;

exports[`generateData generates correct data with 1 cluster 1`] = `
Object {
  "cellSetLegendsData": Array [
    Object {
      "color": "#1f77b4",
      "key": "louvain-5",
      "name": "Cluster 5",
    },
  ],
  "plotData": Array [],
}
`;

exports[`generateData generates correct data with all louvain clusters 1`] = `
Object {
  "cellSetLegendsData": Array [
    Object {
      "color": "#e377c2",
      "key": "louvain-0",
      "name": "Cluster 0",
    },
    Object {
      "color": "#8c564b",
      "key": "louvain-1",
      "name": "Cluster 1",
    },
    Object {
      "color": "#d62728",
      "key": "louvain-2",
      "name": "Cluster 2",
    },
    Object {
      "color": "#2ca02c",
      "key": "louvain-3",
      "name": "Cluster 3",
    },
    Object {
      "color": "#ff7f0e",
      "key": "louvain-4",
      "name": "Cluster 4",
    },
    Object {
      "color": "#1f77b4",
      "key": "louvain-5",
      "name": "Cluster 5",
    },
    Object {
      "color": "#f8e71c",
      "key": "louvain-6",
      "name": "Cluster 6",
    },
    Object {
      "color": "#3957ff",
      "key": "louvain-7",
      "name": "Cluster 7",
    },
    Object {
      "color": "#d3fe14",
      "key": "louvain-8",
      "name": "Cluster 8",
    },
    Object {
      "color": "#c9080a",
      "key": "louvain-9",
      "name": "Cluster 9",
    },
    Object {
      "color": "#fec7f8",
      "key": "louvain-10",
      "name": "Cluster 10",
    },
    Object {
      "color": "#0b7b3e",
      "key": "louvain-11",
      "name": "Cluster 11",
    },
    Object {
      "color": "#0bf0e9",
      "key": "louvain-12",
      "name": "Cluster 12",
    },
    Object {
      "color": "#c203c8",
      "key": "louvain-13",
      "name": "Cluster 13",
    },
  ],
  "plotData": Array [
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
    Object {
      "cellSetKey": "louvain-0",
      "cellSetName": "Cluster 0",
      "color": "#e377c2",
      "x": 1,
      "y": 2,
    },
  ],
}
`;
